# oitg

./: .buildinfo  .gitignore  README.md  cache.html  circuits.html  genindex.html  index.html  objects.inv  paths.html  py-modindex.html  pyproject.toml  results.html  search.html  searchindex.js  setup.py  threshold.html
.circleci/: config.yml
_modules/: index.html  typing.html
_modules/oitg/: cache.html  paths.html  results.html  threshold.html
_sources/: circuits.rst.txt  index.rst.txt  results.rst.txt
conda/oitg/: meta.yaml
docs/: cache.rst  conf.py  index.rst  paths.rst  threshold.rst
oitg/: __init__.py  cache.py  errorbars.py  gate_string.py  hf_transition_frequency.py  image_tools.py  paths.py  results.py  rid_index.py  rid_params.py  threshold.py  uncertainty_to_string.py  units.py
oitg/circuits/: __init__.py  clifford.py  clifford_sym_qutrit.py  composite_pulses.py  gate.py  qasm.py  results.py  to_matrix.py  visualisation.py
oitg/fitting/: FitBase.py  __init__.py  attenuated_sinusoid.py  cos.py  cos_2.py  decaying_sinusoid.py  detuned_pulse_area.py  detuned_square_pulse.py  dipole_bsb_car_rsb.py  exponential_decay.py  gaussian.py  gaussian_beam.py  half_lorentzian.py  line.py  lorentzian.py  parabola.py  poisson.py  rabi_flop.py  rabi_flop_no_decay.py  sin.py  sin_2.py  sinc_2.py  sine_2.py  sinusoid.py  step_function.py  tanh.py  v_function.py
oitg/frontend/: oitg_fetch.py  oitg_index_rids.py
oitg/imaging/: roi_tools.py
test/: test_results.py  test_threshold.py
test/circuits/: test_misc.py  test_process_tomo.py  (+1 more)
tests/: FIXME.txt
(+41 files in other folders)
