[tool.poetry]
name = "oitg"
version = "0.1"
description = "Oxford Ion-Trap Group routines"
authors = ["Oxford Ion Trap Quantum Computing Group"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
statsmodels = "^0.14.0"
scipy = "^1.11.4"
numpy = "^1.24.2"
h5py = "^3.10.0"

[tool.poetry.group.qiskit.dependencies]
qiskit = "^0.45.1"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.22.1"
toml = "^0.10.2"

# Pin exact versions of linters to avoid inconsistencies between CI environments.
yapf = "0.40.2"
flake8 = "6.1.0"

# To generate documentation.
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"

[tool.poetry.scripts]
oitg_fetch = "oitg.frontend.oitg_fetch:main"
oitg_index_rids = "oitg.frontend.oitg_index_rids:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
fmt = "yapf -ir oitg"
fmt-test = "yapf -dr oitg test"
lint = "flake8 oitg test"
test = "python -m unittest discover -t . -v test"
